--- a/src/main/webapp/web/client/index.html
+++ b/src/main/webapp/web/client/index.html
@@ -11,6 +11,7 @@
     <div class='container'>
         <h1>济南常春藤小区业主中心</h1>
         <p>齐心协力，共抗疫情</p>
+        <p style="color: red">[[${info}]]</p>
     </div>
 </header>
 <div class='container'>
